# SMART_server

./: .env  .gitignore  Cargo.toml  README.md  Smart_Server.postman_collection.json  db.sqlite  package-lock.json
.devcontainer/: devcontainer.json
html/: 404.html  index.html
migrations/2024-04-30-083929_create_protected/: down.sql  up.sql
migrations/2024-04-30-084200_create_protecter/: down.sql  up.sql
migrations/2024-04-30-084330_create_protection/: down.sql  up.sql
migrations/2024-04-30-084754_create_positions_history/: down.sql  up.sql
migrations/2024-05-03-120000_tables/: down.sql  up.sql
migrations/2024-05-03-130000_data/: down.sql  up.sql
src/: db.rs  lib.rs  mail.rs  main.rs  model.rs  request_data.rs  responder.rs  schema.rs
www/: index.js  package.json
