[package]
name = "smart-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
serde = { version = "1.0.199", features = ["derive"] }
rand = "0.8.5"
rust-argon2 = "2.1.0"