[package]
name = "smart-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rand = "0.8.5"
rust-argon2 = "2.1.0"
chrono = "0.4.23"
jsonwebtoken = "9.3.0"