[package]
name = "smart-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.0"
mailjet-rs = "0.2.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rust-argon2 = "2.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }